# grpc

./: .gitignore  CMakeLists.txt  README.md  shared_memory_viewer.cpp
Clients/ClientA/: CSVDataReader.cpp  CSVDataReader.h  CrashRecord.cpp  CrashRecord.h  DataParser  main.cpp
nodes/: CMakeLists.txt  shared_memory_viewer  shared_memory_viewer.cpp
nodes/nodeA/: client.py
nodes/nodeB/: CMakeLists.txt  config.json  nodeB.cpp  nodeB_table.csv  server.cpp  shared_memory.hpp  user1_data.json
nodes/nodeC/: CMakeLists.txt  config.json  nodeC_table.csv  server.cpp  shared_memory.hpp
nodes/nodeD/: config.json  nodeD_table.csv  server.cpp  shared_memory.hpp
nodes/nodeE/: CMakeLists.txt  client.cpp  nodeE_table.csv  server.cpp  shared_memory.hpp
nodes/nodeE/proto/: CMakeLists.txt
nodes/protos/: data.grpc.pb.cc  data.grpc.pb.h  data.pb.cc  data.pb.h  data.proto  data_pb2.py  data_pb2_grpc.py
scripts/: build.sh  run.sh
